# Crowchiper

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  cliff.toml  config.json  inline-plugin.js  package-lock.json  package.json  playwright.config.ts  sri-plugin.js  tsconfig.json  vite.config.js
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml  test.yml
build-plugins/: dev-server.js  index.js
e2e/: CLAUDE.md  app-auth.spec.ts  encryption.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  login.spec.ts  register.spec.ts  server.ts  theme.spec.ts
e2e/setup/: global-setup.ts  global-teardown.ts
e2e/specs/: admin-claim.spec.ts  admin-dashboard.spec.ts  app-auth.spec.ts  base-path.spec.ts  claim.spec.ts  encryption.spec.ts  last-selected-post.spec.ts  login.spec.ts  logout.spec.ts  multi-upload.spec.ts  new-post-sibling.spec.ts  post-navigation.spec.ts  reclaim.spec.ts  register.spec.ts  reorder.spec.ts  settings-panel.spec.ts  sidebar.spec.ts  spellcheck.spec.ts  theme.spec.ts  tokens.spec.ts  upload.spec.ts
e2e/specs/nested-posts/: nested-posts-basic.spec.ts  (+8 more)
e2e/utils/: fixtures.ts  server.ts
plugins/: css-minify.js  dev-iife.js  html-utils.js  index.js  inline-iife.js  sri.js
src/: CLAUDE.md  assets.rs  auth.rs  cleanup.rs  cli.rs  csp.rs  jwt.rs  lib.rs  main.rs  names.rs  rate_limit.rs  server_config.rs
src/api/: CLAUDE.md  admin.rs  attachments.rs  config.rs  encryption.rs  error.rs  mod.rs  passkeys.rs  posts.rs  test.rs  tokens.rs  user_settings.rs  users.rs  ws.rs
src/assets/: config.rs  csp.rs  embed.rs  handlers.rs  mod.rs  response.rs
src/auth/: cookie.rs  errors.rs  extractors.rs  ip.rs  mod.rs  state.rs  types.rs
src/db/: attachments.rs  challenge.rs  encryption.rs  login_challenge.rs  mod.rs  passkey.rs  posts.rs  token.rs  user.rs
src/plugin/: error.rs  helpers.rs  manager.rs  mod.rs  permissions.rs  runtime.rs  state.rs
tests/: CLAUDE.md  admin_tests.rs  api_tests.rs  app_auth_tests.rs  attachment_tests.rs  attachments_tests.rs  base_path_tests.rs  claim_tests.rs  csp_nonce_tests.rs  encryption_tests.rs  login_tests.rs  plugin_permission_isolation_tests.rs  plugin_tests.rs  post_encryption_tests.rs  posts_tests.rs  reclaim_tests.rs  register_tests.rs  reorder_tests.rs  sidebar_tests.rs  startup_tests.rs  theme_tests.rs  token_tests.rs  ws_tests.rs
tests/common/: mod.rs
tests/plugins/: CLAUDE.md  Cargo.toml  build.sh  lib.rs
tests/plugins/examples/: empty_name.rs  env_error.rs  env_success.rs  fs_error.rs  fs_success.rs  good.rs  hook_echo.rs  hook_error.rs  infinite_loop.rs  log_test.rs  memory_hog.rs  net_error.rs  net_success.rs  slow_hook.rs  stack_overflow.rs
tests/plugins/wasm/: empty-name.wasm  env-error.wasm  env-success.wasm  fs-error.wasm  fs-success.wasm  good.wasm  hook-echo.wasm  hook-error.wasm  infinite-loop.wasm  log-test.wasm  memory-hog.wasm  net-error.wasm  net-success.wasm  slow-hook.wasm  stack-overflow.wasm
web/: CLAUDE.md  styles.css
web/app/: CLAUDE.md  app.css  editor.css  index.html  setup-encryption.html
web/dashboard/: index.html
web/inline/: inline.ts  vite-env.d.ts
web/login/: claim.html  index.html  register.html
web/public/: index.html  register.html
web/shared/: api-utils.ts  dom.ts  storage.ts
wit/: plugin.wit
(+85 files in other folders)
