[package]
name = "crowchiper"
version = "0.1.0"
edition = "2024"

[build-dependencies]
serde_json = "1.0"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures = "0.3"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
mime_guess = "=2.0.5"
sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "452da1acf549e94a6358a770e7513433f15b5f0a", features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation", "conditional-ui", "workaround-google-passkey-specific-issues"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.9.2"

[dev-dependencies]
chromiumoxide = { version = "0.8.0", features = ["tokio-runtime"] }
futures = "0.3.31"
libc = "0.2"
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
